<resources>
    <string name="app_name">FootballProject</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">User name</string>
    <string name="login">LOGIN</string>
    <string name="start">START</string>
    <string name="liga" translatable="false">LA LIGA</string>
    <string name="mundial">WORLD CUP</string>
    <string name="make11">YOU 11</string>
    <string name="captu">Screenshot</string>
    <string name="logout">LOG OUT</string>
    <string name="no_account">You don\'t have an account? Register now </string>
    <string name="create_account">CREATE ACCOUNT </string>
    <string name="bdo">BALLON D\'OR</string>
    <string name="perm">Permission needed</string>
    <string name="empty">There can\'t be empty fields</string>
    <string name="nopass">Passwords don\'t match</string>
    <string name="forget_pass">Recover password</string>
    <string name="nouser">User not found</string>
    <string name="chpass">CHANGE PASSWORD</string>
    <string name="mail">Email</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="back_color">Background color </string>
    <string name="change">CHANGE</string>
    <string name="general" translatable="false">General</string>
    <string name="cache" translatable="false">Cache</string>
    <string name="offline" translatable="false">Offline</string>
    <string name="vibrate">Vibrate</string>
    <string name="exit">Coming out</string>
    <string name="settings">SETTINGS</string>
    <string name="last_win">Last win</string>
    <string name="messages">Messages</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>