<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/chat">

        <EditTextPreference
            app:key="name"
            app:title="@string/username"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="#FFFFFF"
            app:entries="@array/color_names"
            app:entryValues="@array/color_values"
            app:key="background_color"
            app:title="@string/back_color"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cache">

        <SwitchPreferenceCompat
            app:key="offline"
            app:title="@string/offline" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general">

        <CheckBoxPreference
            app:key="vibrate"
            app:title="@string/vibrate" />

    </PreferenceCategory>

</PreferenceScreen>