<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500"
    tools:context=".Fragments.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="491dp"
        android:layout_marginBottom="211dp"
        android:src="@android:drawable/screen_background_light_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="327dp"
        android:layout_height="405dp"
        android:src="@drawable/silueta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="345dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/username"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/profile">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/no_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="175dp"
            android:text="@string/forget_pass"
            android:textColor="@color/green_500" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="210dp"
            android:layout_height="62dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/no_account"
            android:layout_width="210dp"
            android:layout_height="62dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="265dp"
            android:text="@string/create_account" />



    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>